Fix screenshot view on mobile

--- a/src/components/project/detail/ProjectScreenshots.module.scss
+++ b/src/components/project/detail/ProjectScreenshots.module.scss
@@ -9,4 +9,9 @@
   img {
     object-fit: contain;
   }
+
+  @include belowTabletAndSmallLaptops {
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+  }
 }
